Refactor audit logging and create common log model for auditing and event logging