@@ -1,5 +1,6 @@
 package com.czertainly.core.security.authn.client;
 
+import com.czertainly.api.model.core.logging.enums.AuthMethod;
 import com.czertainly.core.model.auth.AuthenticationRequestDto;
 import com.czertainly.core.security.authn.CzertainlyAuthenticationException;
 import com.czertainly.core.security.authn.client.dto.AuthenticationResponseDto;
@@ -21,7 +22,6 @@ import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Mono;
 
-import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -56,10 +56,12 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
                                     .collect(Collectors.joining(","))
                     )
             );
+
+            AuthenticationRequestDto authRequest = getAuthPayload(headers);
             WebClient.RequestHeadersSpec<?> request = getClient(customAuthServiceBaseUrl)
                     .post()
                     .uri("/auth")
-                    .body(Mono.just(getAuthPayload(headers)), AuthenticationRequestDto.class)
+                    .body(Mono.just(authRequest), AuthenticationRequestDto.class)
                     .accept(MediaType.APPLICATION_JSON);
 
             AuthenticationResponseDto response = request
@@ -70,7 +72,7 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
             if (response == null) {
                 throw new CzertainlyAuthenticationException("Empty response received from authentication service.");
             }
-            return createAuthenticationInfo(response);
+            return createAuthenticationInfo(authRequest.getAuthMethod(), response);
         } catch (WebClientResponseException.InternalServerError e) {
             throw new CzertainlyAuthenticationException("An error occurred when calling authentication service.", e);
         }
@@ -78,35 +80,42 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
 
     private AuthenticationRequestDto getAuthPayload(HttpHeaders headers) {
         AuthenticationRequestDto requestDto = new AuthenticationRequestDto();
+        requestDto.setAuthMethod(AuthMethod.NONE);
         final List<String> certificateHeaderNameList = headers.get(certificateHeaderName);
-        if( certificateHeaderNameList != null) {
-            try {
-                String certificateInHeader = java.net.URLDecoder.decode(certificateHeaderNameList.get(0), StandardCharsets.UTF_8.name());
-                requestDto.setCertificateContent(CertificateUtil.normalizeCertificateContent(certificateInHeader));
-            } catch (UnsupportedEncodingException e) {
-                logger.debug("Header not URL encoded");
-                requestDto.setCertificateContent(certificateHeaderNameList.get(0));
-            }
+        if (certificateHeaderNameList != null) {
+            String certificateInHeader = java.net.URLDecoder.decode(certificateHeaderNameList.getFirst(), StandardCharsets.UTF_8);
+            requestDto.setAuthMethod(AuthMethod.CERTIFICATE);
+            requestDto.setCertificateContent(CertificateUtil.normalizeCertificateContent(certificateInHeader));
         }
 
         final List<String> authTokenHeaderNameList = headers.get(authTokenHeaderName);
-        if(authTokenHeaderNameList != null) {
-            requestDto.setAuthenticationToken(authTokenHeaderNameList.get(0));
+        if (authTokenHeaderNameList != null) {
+            requestDto.setAuthenticationToken(authTokenHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.TOKEN);
+            }
         }
 
         final List<String> systemUserHeaderNameList = headers.get(AuthHelper.SYSTEM_USER_HEADER_NAME);
-        if(systemUserHeaderNameList != null){
-            requestDto.setSystemUsername(systemUserHeaderNameList.get(0));
+        if (systemUserHeaderNameList != null) {
+            requestDto.setSystemUsername(systemUserHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.USER_PROXY);
+            }
         }
 
         final List<String> userUuidHeaderNameList = headers.get(AuthHelper.USER_UUID_HEADER_NAME);
-        if(userUuidHeaderNameList != null){
-            requestDto.setUserUuid(userUuidHeaderNameList.get(0));
+        if (userUuidHeaderNameList != null) {
+            requestDto.setUserUuid(userUuidHeaderNameList.getFirst());
+            if (requestDto.getAuthMethod() == AuthMethod.NONE) {
+                requestDto.setAuthMethod(AuthMethod.USER_PROXY);
+            }
         }
+
         return requestDto;
     }
 
-    private AuthenticationInfo createAuthenticationInfo(AuthenticationResponseDto response) {
+    private AuthenticationInfo createAuthenticationInfo(AuthMethod authMethod, AuthenticationResponseDto response) {
         if (!response.isAuthenticated()) {
             return AuthenticationInfo.getAnonymousAuthenticationInfo();
         }
@@ -114,6 +123,7 @@ public class CzertainlyAuthenticationClient extends CzertainlyBaseAuthentication
         try {
             UserDetailsDto userDetails = objectMapper.readValue(response.getData(), UserDetailsDto.class);
             return new AuthenticationInfo(
+                    authMethod,
                     userDetails.getUser().getUuid(),
                     userDetails.getUser().getUsername(),
                     userDetails.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList()),
